# 2cent-tts-onnx

./: .gitignore  README.md  pyproject.toml
src/: decoder.py  features.py  main.py  phonemize.py  server.py  strategy6.py  tokens.py
